--- a/src/assets/styles/app.scss
+++ b/src/assets/styles/app.scss
@@ -33,6 +33,10 @@ main {
     display: flex;
   }
 }
+.circularProgress {
+  padding-top: 10%;
+  align-items:center;
+}
 .content {
   display: flex;
   flex-direction: column;
@@ -62,8 +66,19 @@ main {
 
     &-text {
       margin-top: 1em;
-      width: 40%;
+      width: 60%;
       min-width: 27em;
+      text-align: justify;
+
+      a {
+        color: green;
+        font-weight: 500;
+
+        &:hover {
+          color: rgb(21, 94, 17);
+          font-weight: 500;
+        }
+      }
     }
   }
 
@@ -135,6 +150,10 @@ main {
   margin-top: 1em;
 }
 
+.hide {
+  display: none;
+}
+
 /* Task */
 
 .task {
@@ -191,7 +210,6 @@ main {
     &:hover {
       background-color: #26572b;
     }
-
   }
 }
 
@@ -220,3 +238,4 @@ main {
     color: red;
   }
 }
+
