--- a/src/assets/styles/navbar.css
+++ b/src/assets/styles/navbar.css
@@ -180,7 +180,7 @@ a {
 #header #menu nav > ul li ul {
   position: absolute;
   display: none;
-  left: -200;
+  left: -190px;
   top: 35px;
   min-width: 330px;
   opacity: 0;
