--- a/src/assets/styles/app.scss
+++ b/src/assets/styles/app.scss
@@ -35,7 +35,7 @@ main {
 }
 .circularProgress {
   padding-top: 10%;
-  align-items:center;
+  align-items: center;
 }
 .content {
   display: flex;
@@ -45,6 +45,7 @@ main {
   padding: 3em;
   padding-top: 118px;
   border-radius: 1em;
+  padding-bottom: 0em;
 
   h1 {
     text-align: center;
@@ -59,6 +60,14 @@ main {
     }
   }
 
+  &__image {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    padding: 1em;
+    padding-bottom: 2em;
+  }
+
   &__subtitle {
     width: 100%;
     display: flex;
@@ -69,6 +78,9 @@ main {
       width: 60%;
       min-width: 27em;
       text-align: justify;
+      display: flex;
+      justify-content: center;
+      align-items: center;
 
       a {
         color: green;
@@ -107,8 +119,48 @@ main {
   }
 }
 
+.forgotten-password {
+  display: flex;
+  justify-content: flex-end;
+
+  & a {
+    font-size: 0.8em;
+    &:hover {
+      color: green;
+      font-weight: 700;
+    }
+  }
+}
+
 .hidden {
   display: none;
+}
+
+.button {
+  &__hover:hover {
+    background-color: rgb(21, 94, 17);
+    color: white;
+  }
+}
+
+.selected {
+  font-weight: 500;
+}
+
+input[type="radio"]:checked:after {
+  // Make the checked icon blue
+  width: 12px;
+  height: 12px;
+  border-radius: 15px;
+  top: -2px;
+  left: -1px;
+  position: relative;
+  background: #3d7e44;
+  content: '';
+  display: inline-block;
+  visibility: visible;
+  border: 2px solid white;
+
 }
 
 /* Map */
@@ -143,6 +195,7 @@ main {
 .login_form .form-row {
   height: 2em;
   margin: 0.5em !important;
+  padding-top: 0;
 }
 
 .alert {
@@ -239,3 +292,59 @@ main {
   }
 }
 
+// Queue
+
+.results-table {
+  max-height:500px;
+  width:100%;
+}
+
+.results-row-container {
+  overflow-y: scroll;
+  height: 100%;
+  width:70%;
+  display:flex;
+  flex-direction: column;
+  align-items: center;
+  align-content: center;
+}
+
+// Footer
+
+footer {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 1em;
+  padding-top: 5em;
+}
+
+footer .wrapper {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+
+footer .wrapper ul {
+  width: 80%;
+  display: flex;
+  // no bullet points
+  list-style: none;
+  justify-content: space-evenly;
+  font-size: 18px;
+  padding: 1em;
+  font-weight: 600;
+  color: #4a4a4a;
+
+  // border at the top
+  border-top: 7px solid #e6e6e66f;
+
+  & li:hover a {
+    color: green;
+  }
+
+  & li:hover a strong {
+    color: green;
+  }
+}
