changes to queue page

--- a/src/assets/styles/queue.scss
+++ b/src/assets/styles/queue.scss
@@ -44,6 +44,19 @@
 
     }
   }
+
+  &-col {
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 40%;
+
+    &:nth-child(3) {
+      width: 20%;
+      text-align: right;
+    }
+
+  }
 }
 
 .results {
