--- a/src/assets/styles/card.scss
+++ b/src/assets/styles/card.scss
@@ -1,60 +1,100 @@
 .card_container {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 
 .card {
-    cursor:pointer;
-    width: 300px;
-    margin: 2em;
-    border-radius: 8px;
-    box-shadow: 0px 0px 8px #ccc;
-    color: #253b56;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: flex-end;
 
-    &__content {
-        padding: 4px 16px 20px 16px;
-        
-        &-title {
-            font-weight: 600;
-            margin: 12px 0px 0px 0px;
-        }
+  cursor: pointer;
+  width: 300px;
+  margin: 2em;
+  border-radius: 8px;
+  box-shadow: 0px 0px 8px #ccc;
+  color: #253b56;
 
-        &-label {
-            color: #8294aa;
-            font-size: 14;
-            margin: 4px 0;
-        }
+  &__content {
+    padding: 4px 16px 20px 16px;
 
-        &-description {
-            font-size: 14;
-            margin: 8px 0 0 0;
-        }
+    &-title {
+      font-weight: 600;
+      margin: 12px 0px 0px 0px;
     }
 
-    &__image {
-        background-color: lightGray;
-        border-radius: 8px 8px 0 0;
+    &-label {
+      color: #8294aa;
+      font-size: 14;
+      margin: 4px 0;
+    }
+
+    &-description {
+      font-size: 14;
+      margin: 8px 0 0 0;
+    }
+
+    &-footer {
+      // stick to bottom of card
+      position: relative;
+      bottom: 0;
+      right: 0;
+      width: 50%;
+
+      &-icons {
+        display: flex;
         width: 100%;
-        height: 118px;
-        overflow: hidden;
-        transition: height 0.25s ease-out;
+        padding: 1em;
+      }
+
+      &-icon {
+        display: flex;
+        height: 15px;
+        width: 100%;
+
+        & small {
+          width: 100%;
+          margin-right: 4px;
+          text-align: right;
+        }
+
+        & img {
+          height: 100%;
+          object-fit: contain;
+        }
 
         &:hover {
-          transition: height 0.25s ease-in;
-          height:200px;
+          font-weight: 600;
         }
-
-        &-container {
-          width:100%;
-          justify-content:center;
-          display:flex;
-        }
+      }
     }
+  }
+
+  &__image {
+    background-color: lightGray;
+    border-radius: 8px 8px 0 0;
+    width: 100%;
+    height: 118px;
+    overflow: hidden;
+    transition: height 0.25s ease-out;
+
+    &:hover {
+      transition: height 0.25s ease-in;
+      height: 200px;
+    }
+
+    &-container {
+      width: 100%;
+      justify-content: center;
+      display: flex;
+    }
+  }
 }
 
 .card:hover {
-    background-color:rgb(225, 225, 225);
-    -webkit-filter: grayscale(40%); /* Safari 6.0 - 9.0 */
-    filter: grayscale(40%);
+  background-color: rgb(225, 225, 225);
+  -webkit-filter: grayscale(40%); /* Safari 6.0 - 9.0 */
+  filter: grayscale(40%);
 }
